# Note

./: README.md  RoboticNote  RoboticNote.md
Cmake/1EasyDemo/: main.cpp
Cmake/2StandDemo/include/: lib.h
Cmake/3StaticlibDemo/StandDemo/: CMakeLists.txt  README.md  main.cpp
Cmake/3StaticlibDemo/StaticLibExternalUse/: CMakeLists.txt
Cmake/3StaticlibDemo/StaticLibExternalUse/include/: myfunc.h
Cmake/4ShareLibDemo/SharelibExternalUse/: CMakeLists.txt  main.cpp
Cmake/4ShareLibDemo/SharelibExternalUse/src/: myfunc.cpp
Cmake/4ShareLibDemo/StandDemo/: CMakeLists.txt
Cmake/4ShareLibDemo/StandDemo/src/: lib.cpp  lib_1.cpp
